Fix Java Student Grades logger config

--- a/examples/java/java-student_grades-01_base_example/src/test/resources/log4j2.properties
+++ b/examples/java/java-student_grades-01_base_example/src/test/resources/log4j2.properties
@@ -1,4 +1,4 @@
-name = CodelyTvJavaBasicSkeleton
+name = CodelyTvStudentGrades
 property.filename = logs
 appenders = console, file
 
@@ -15,7 +15,7 @@ appender.console.filter.threshold.level = info
 
 appender.file.type = File
 appender.file.name = LOGFILE
-appender.file.fileName=var/log/java-basic-skeleton-test.log
+appender.file.fileName=var/log/student-grades.log
 appender.file.logstash.type=LogstashLayout
 appender.file.logstash.dateTimeFormatPattern = yyyy-MM-dd'T'HH:mm:ss.SSSZZZ
 appender.file.logstash.eventTemplateUri = classpath:LogstashJsonEventLayoutV1.json
@@ -23,7 +23,7 @@ appender.file.logstash.prettyPrintEnabled = false
 appender.file.logstash.stackTraceEnabled = true
 
 loggers = file
-logger.file.name = tv.codely.java_basic_skeleton
+logger.file.name = tv.codely.student_grades
 logger.file.level = info
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
