Rename to User semantics

--- a/examples/php/php-user_modelling-01_base/composer.json
+++ b/examples/php/php-user_modelling-01_base/composer.json
@@ -38,12 +38,12 @@
     },
     "autoload": {
         "psr-4": {
-            "CodelyTv\\PhpBootstrap\\": "src/"
+            "CodelyTv\\UserModelling\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "CodelyTv\\PhpBootstrapTest\\": "tests/"
+            "CodelyTv\\UserModelling\\Test\\": "tests/"
         }
     },
     "minimum-stability": "stable",
