[csharp][booking][01_base] Change namespace to CodelyTv.Booking

--- a/examples/csharp/csharp-booking-01_base/csharp-booking-01_base.csproj
+++ b/examples/csharp/csharp-booking-01_base/csharp-booking-01_base.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>tv.codely</RootNamespace>
+    <RootNamespace>CodelyTv.Booking</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
