[csharp] [courses_steps_csv] Test execution works 🎉

--- a/examples/csharp/csharp-courses_steps_csv-01_base/test/CoursesStepsCsv.Tests/CoursesStepsCsv.Tests.csproj
+++ b/examples/csharp/csharp-courses_steps_csv-01_base/test/CoursesStepsCsv.Tests/CoursesStepsCsv.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>CodelyTv.CoursesStepsCsv.Tests</RootNamespace>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -17,6 +18,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\CoursesStepsCsv\CoursesStepsCsv.csproj" />
   </ItemGroup>
 
 </Project>
