Extract method to get the minimum power needed

--- a/examples/typescript/ts-energy_power-01_base/package.json
+++ b/examples/typescript/ts-energy_power-01_base/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest",
+    "test:watch": "jest --watch",
     "test-coverage": "jest --coverage"
   },
   "devDependencies": {
