Refactor(test): Refactor test method for first tiers

--- a/exercises/tiered_pricing/solutions/mperezi/build.gradle
+++ b/exercises/tiered_pricing/solutions/mperezi/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'
+    testImplementation 'io.github.amaembo:streamex:0.4.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
