--- a/exercises/tiered_pricing/solutions/isaac1024_baby-steps/Cargo.toml
+++ b/exercises/tiered_pricing/solutions/isaac1024_baby-steps/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 fake = "2.4"
