[TIERED_PRICING] Add basic dependencies
Added the basic dependencies for the testing side

--- a/exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/pom.xml
+++ b/exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/pom.xml
@@ -6,12 +6,26 @@
 
     <groupId>com.adrianlh</groupId>
     <artifactId>GraduatedTieredPrice</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.23.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
