[TIERED_PRICING]  🟢 Create Base Test And Service Class

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/.idea/
+exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/target/
