[TIERED_PRICING] 🔵 Refactor Packages And Remove Classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
-exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/.idea/
-exercises/graduated_tiered_prices/solutions/adrianlh_java/GraduatedTieredPrice/target/
+exercises/graduated_tiered_prices/solutions/adrianlh_java/target/
+exercises/graduated_tiered_prices/solutions/adrianlh_java/.idea/
+
+exercises/graduated_tiered_prices/.DS_Store
