--- a/exercises/tiered_pricing/solutions/adrianliz/java/build.gradle
+++ b/exercises/tiered_pricing/solutions/adrianliz/java/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.4'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
