--- a/exercises/graduated_tiered_prices/solutions/adrianliz/package.json
+++ b/exercises/graduated_tiered_prices/solutions/adrianliz/package.json
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^5.3.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
+    "jest-each": "^29.5.0",
     "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.3.1",
     "style-loader": "^2.0.0",
